--- a/config.yaml
+++ b/config.yaml
@@ -30,7 +30,7 @@ module:
 ## ADVANCED
 ############################
 
-enableGitInfo: false
+enableGitInfo: true
 math: true
 summaryLength: 30
 paginate: 10
